<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/whiteColor"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:src="@mipmap/logo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:ignore="ContentDescription" />

    <!-- start is left -->
    <EditText
        android:id="@+id/userName"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:hint="@string/user_name"
        android:textSize="16sp"
        android:inputType="textEmailAddress"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:paddingStart="10dp"
        android:background="@color/colorForm"
        tools:ignore="Autofill,RtlSymmetry" />

    <!-- bisa di pasang margin -->
    <EditText
        android:id="@+id/password"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:hint="@string/password"
        android:textSize="16sp"
        android:inputType="textPassword"
        android:layout_marginTop="30dp"
        android:paddingStart="10dp"
        app:layout_constraintTop_toBottomOf="@id/userName"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:background="@color/colorForm"
        tools:ignore="Autofill"/>

    <Button
        android:id="@+id/loginButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button"
        android:layout_marginTop="30dp"
        android:text="@string/login_Button"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</android.support.constraint.ConstraintLayout>